--- a/src/components/projects/project/Project.css
+++ b/src/components/projects/project/Project.css
@@ -1,3 +1,3 @@
-.project-name {
+/*.project-name {
     white-space: nowrap;
-}
+}   */
